cambio de jdk e implementacion de build con dependencias