@@ -11,6 +11,7 @@ import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.HashMap;
 import java.util.Map;
@@ -36,7 +37,7 @@ public class ServicioPlugin implements IServicioPlugin {
             if (!directorioPlugins.exists()) {
                 directorioPlugins.mkdirs();
             }
-            Path rutaDestino = Path.of(rutaPlugins, archivo.getNombre());
+            Path rutaDestino = Paths.get(rutaPlugins, archivo.getNombre());
             Files.copy(ruta, rutaDestino, StandardCopyOption.REPLACE_EXISTING);
             agregarPlugin();
         } catch (IOException e) {
